# nexus-synth

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  CMakeLists.txt  README.md  build-windows.bat  build.sh  migrate_dependencies.sh  nexussynth.pc.in  opencode.json  test_convergence_simple.cpp  test_dependencies.cpp  test_fft_performance.cpp  test_global_variance.cpp  test_label_simple  test_model_convergence.cpp  test_pbp_synthesis_engine.cpp  test_simple_error_handler.cpp
.claude/agents/: task-orchestrator.md
.gemini/: settings.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: performance_regression.yml
.github/prompts/: iterate-task.toolsets.jsonc  proceed-next-task.prompt.md
.github/scripts/: analyze_performance.py  generate_performance_dashboard.py  performance_regression_detector.py  regression_detector.py  stability_analysis.py  test_regression_detection.py  trend_analysis.py  update_performance_baseline.py
.github/workflows/: build.yml  ci.yml  nightly-builds.yml  performance-regression-detection.yml  pull-request.yml  release.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: NexusSynth.md  prd.txt
.taskmaster/docs/research/: 2025-08-19_utau-resampler-command-line-interface-standards-mo.md
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
cmake/: CPM.cmake  Dependencies.cmake
docs/: BUILD_GUIDE_KO.md  CICD_WORKFLOWS.md  COMMUNITY_TESTING.md  DEPENDENCIES.md  ENGINE_USAGE_KO.md  INSTALLATION_KO.md  PERFORMANCE_BENCHMARKING.md  README.md  REGRESSION_DETECTION.md  TESTING_GUIDE.md  TROUBLESHOOTING_FAQ.md  UTAU_INTEGRATION_KO.md  VOICE_BANK_CREATION_KO.md
include/nexussynth/: audio_utils.h  batch_processor.h  cli_interface.h  conditioning_config.h  context_feature_extractor.h  context_features.h  context_hmm_bridge.h  context_mlpg_bridge.h  data_augmentation.h  fft_transform_manager.h  gaussian_mixture.h  hmm_structures.h  hmm_trainer.h  label_file_generator.h  midi_phoneme_integrator.h  mlpg_engine.h  mlpg_gpu_acceleration.h  nexussynth.h  nvm_format.h  pbp_synthesis_engine.h  performance_profiler.h  quality_metrics.h  streaming_buffer_manager.h  synthesis_quality_validator.h  utau_argument_parser.h  utau_error_handler.h  utau_flag_converter.h  utau_logger.h  utau_oto_parser.h  validation_system.h  vcv_pattern_recognizer.h  voice_metadata.h  voicebank_scanner.h  window_optimizer.h  world_wrapper.h
scripts/: convert_voicebank.bat  convert_voicebank.sh  nexussynth_batch.json
src/: CMakeLists.txt  README.md  audio_utils.cpp  cli_interface.cpp  cli_progress_callbacks.cpp  cli_utils.cpp  context_feature_extractor.cpp  context_features.cpp  gaussian_mixture.cpp  hmm_trainer.cpp  label_file_generator.cpp  main.cpp  midi_phoneme_integrator.cpp  nexussynth_engine.cpp  nvm_format.cpp  pbp_synthesis_engine.cpp  performance_profiler.cpp  test_audio_utils.cpp  test_compression_checksum.cpp  test_midi_phoneme_integrator.cpp  test_version_management.cpp  utau_oto_parser.cpp  vcv_pattern_recognizer.cpp  voice_metadata.cpp  world_wrapper.cpp
src/conditioning/: batch_processor.cpp  conditioning_config.cpp  validation_system.cpp  validation_system_original.cpp  voicebank_scanner.cpp
src/interface/: utau_argument_parser.cpp  utau_error_handler.cpp  utau_flag_converter.cpp  utau_logger.cpp
src/io/: label_file_generator.cpp  world_parameter_extractor.cpp  world_wrapper.cpp
src/ml/: context_feature_extractor.cpp  context_hmm_bridge.cpp  data_augmentation.cpp  gaussian_mixture.cpp  hmm_trainer.cpp  mlpg_engine.cpp  quality_metrics.cpp
src/synthesis/: pbp_synthesis_engine.cpp  streaming_buffer_manager.cpp  window_optimizer.cpp
src/utils/: fft_transform_manager.cpp
tests/: CMakeLists.txt  test_conditioning_config.cpp  test_context_hmm_integration.cpp  test_data_augmentation.cpp  test_enhanced_synthesis.cpp  test_enhanced_viterbi.cpp  test_hmm_simple_integration.cpp  test_hmm_trainer.cpp  test_label_file_generator.cpp  test_label_simple.cpp  test_main.cpp  test_mlpg_engine.cpp  test_nexussynth_engine.cpp  test_overlap_add.cpp  test_parallel_hmm_training.cpp  test_performance_profiler.cpp  test_quality_metrics.cpp  test_streaming_buffer_manager.cpp  test_utau_argument_parser.cpp  test_utau_error_handler.cpp  test_utau_flag_converter.cpp  test_utau_logger.cpp  test_utau_oto_parser.cpp  test_validation_system.cpp  test_vcv_pattern_recognizer.cpp  test_viterbi_interface.cpp  test_voicebank_scanner.cpp  test_window_optimization.cpp  test_window_performance_benchmark.cpp  test_world_wrapper.cpp
tests/integration/: CMakeLists.txt  README.md
tests/integration/ab_comparison/: README.md  ab_comparator.cpp  ab_comparator.h  ab_comparison_tool.cpp  test_ab_comparator.cpp
tests/integration/benchmarks/: benchmark_data_collector.cpp  benchmark_data_collector.h  benchmark_report_generator.h  performance_benchmark.cpp  performance_benchmark.h  performance_benchmark_tool.cpp  test_performance_benchmark.cpp  test_rendering_performance.cpp
tests/integration/config/: ab_comparison_config.json.in  quality_thresholds.json.in  test_scenarios.json.in
tests/integration/conversion/: test_nvm_generation.cpp  test_voicebank_conversion.cpp
tests/integration/synthesis/: test_e2e_synthesis.cpp
tests/integration/utils/: audio_comparator.cpp  audio_comparator.h  performance_monitor.cpp  performance_monitor.h  quality_analyzer.cpp  quality_analyzer.h  test_data_manager.cpp  test_data_manager.h
